--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
         versionCode 1
         versionName "1.0"
         resConfigs "en", "tr"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -49,6 +50,7 @@ ext {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:support-v4:$supportLib"
     implementation "com.android.support:appcompat-v7:$supportLib"
     implementation "com.android.support:design:$supportLib"
     implementation "com.android.support:cardview-v7:$supportLib"
@@ -56,7 +58,6 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$supportLib"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "android.arch.persistence.room:runtime:$room"
-    implementation 'com.android.support:support-v4:27.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:$room"
     implementation "android.arch.lifecycle:extensions:$lifecycle"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle"
