--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$supportLib"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "android.arch.persistence.room:runtime:$room"
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:support-vector-drawable:27.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:$room"
     implementation "android.arch.lifecycle:extensions:$lifecycle"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle"
