--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,12 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:fullBackupContent="@xml/backup_descriptor"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".activities.LoginActivity"
@@ -23,21 +23,30 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activities.WelcomeActivity"
+            android:label="@string/welcome"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".activities.MainActivity"
             android:label="@string/recipes"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activities.WelcomeActivity"
-            android:label="@string/title_activity_welcome"
-            android:launchMode="singleTop"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".activities.RecipeDetailActivity"
-            android:label="@string/title_activity_recipe_detail"
+            android:label="@string/recipe_detail"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.kitchen.activities.MainActivity" />
+        </activity>
+        <activity
+            android:name=".activities.NewRecipeActivity"
+            android:label="@string/new_recipe"
+            android:launchMode="singleTop"
+            android:parentActivityName=".activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.kitchen.activities.MainActivity" />
