--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.kitchen">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
@@ -12,6 +18,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.kitchen.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity
             android:name=".activities.LoginActivity"
             android:launchMode="singleTask"
@@ -22,16 +39,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activities.WelcomeActivity"
             android:label="@string/welcome"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/recipes"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".activities.RecipeDetailActivity"
             android:label="@string/recipe_detail"
@@ -42,6 +62,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.kitchen.activities.MainActivity" />
         </activity>
+
         <activity
             android:name=".activities.NewRecipeActivity"
             android:label="@string/new_recipe"
@@ -51,6 +72,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.kitchen.activities.MainActivity" />
         </activity>
+
     </application>
 
 </manifest>
