--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,13 +53,15 @@ dependencies {
     implementation "com.android.support:support-v4:$supportLib"
     implementation "com.android.support:appcompat-v7:$supportLib"
     implementation "com.android.support:design:$supportLib"
+    implementation "com.android.support:support-v13:$supportLib"
     implementation "com.android.support:cardview-v7:$supportLib"
     implementation "com.android.support:palette-v7:$supportLib"
     implementation "com.android.support:recyclerview-v7:$supportLib"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "android.arch.persistence.room:runtime:$room"
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:support-vector-drawable:27.1.1'
+    implementation "com.android.support:design:$supportLib"
+    implementation "com.android.support:support-vector-drawable:$supportLib"
+    implementation 'com.android.support:support-v4:27.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:$room"
     implementation "android.arch.lifecycle:extensions:$lifecycle"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle"
@@ -70,6 +72,7 @@ dependencies {
     implementation "com.firebaseui:firebase-ui-database:$firebaseUI"
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
