--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
         </activity>
 
         <activity
-            android:name=".activities.NewRecipeActivity"
+            android:name=".activities.RecipeEditActivity"
             android:label="@string/new_recipe"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity">
