--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
 
         <activity
             android:name=".activities.RecipeEditActivity"
-            android:label="@string/new_recipe"
+            android:label="@string/edit_recipe"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity">
             <meta-data
