--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.kitchen.fileprovider"
@@ -39,19 +38,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.WelcomeActivity"
             android:label="@string/welcome"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/recipes"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activities.RecipeDetailActivity"
             android:label="@string/recipe_detail"
@@ -62,7 +58,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.kitchen.activities.MainActivity" />
         </activity>
-
         <activity
             android:name=".activities.RecipeEditActivity"
             android:label="@string/edit_recipe"
@@ -72,7 +67,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.kitchen.activities.MainActivity" />
         </activity>
-
+        <activity android:name=".activities.FoodActivity"></activity>
     </application>
 
 </manifest>
