--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+    implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
