--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.kitchen.activities.MainActivity" />
         </activity>
-        <activity android:name=".activities.FoodActivity"></activity>
+        <activity
+            android:name=".activities.FoodActivity"
+            android:label="@string/add_food"
+            android:launchMode="singleTop"
+            android:parentActivityName=".activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.kitchen.activities.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
