--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,16 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
+        <receiver android:name=".widget.ShoppingListWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/recipe_ingredients_widget_info" />
+        </receiver>
+
         <activity
             android:name=".activities.LoginActivity"
             android:launchMode="singleTop"
