--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
                 android:value="com.example.kitchen.activities.MainActivity" />
         </activity>
         <activity
-            android:name=".activities.FoodActivity"
+            android:name=".activities.FoodDefinitionActivity"
             android:label="@string/add_food"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity">
