--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,22 +61,18 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$room"
     implementation "com.android.support:design:$supportLib"
     implementation "com.android.support:support-vector-drawable:$supportLib"
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation "com.android.support:support-v4:$supportLib"
     annotationProcessor "android.arch.persistence.room:compiler:$room"
     implementation "android.arch.lifecycle:extensions:$lifecycle"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle"
-    implementation "android.arch.paging:runtime:$paging"
     implementation "com.google.firebase:firebase-core:$firebase"
     implementation "com.firebaseui:firebase-ui-auth:$firebaseUI"
     implementation "com.firebaseui:firebase-ui-storage:$firebaseUI"
     implementation "com.firebaseui:firebase-ui-database:$firebaseUI"
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
