--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,11 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.kitchen"
         minSdkVersion 19
-        //noinspection OldTargetApi
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         resConfigs "en", "tr"
@@ -39,40 +38,31 @@ android {
     }
 }
 
-ext {
-    supportLib = "27.1.1"
-    room = "1.1.1"
-    lifecycle = "1.1.1"
-    paging = "1.0.1"
-    firebase = "16.0.1"
-    firebaseUI = "4.1.0"
-}
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "com.android.support:support-v4:$supportLib"
-    implementation "com.android.support:appcompat-v7:$supportLib"
-    implementation "com.android.support:design:$supportLib"
-    implementation "com.android.support:support-v13:$supportLib"
-    implementation "com.android.support:cardview-v7:$supportLib"
-    implementation "com.android.support:palette-v7:$supportLib"
-    implementation "com.android.support:recyclerview-v7:$supportLib"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation "android.arch.persistence.room:runtime:$room"
-    implementation "com.android.support:design:$supportLib"
-    implementation "com.android.support:support-vector-drawable:$supportLib"
-    implementation "com.android.support:support-v4:$supportLib"
-    annotationProcessor "android.arch.persistence.room:compiler:$room"
-    implementation "android.arch.lifecycle:extensions:$lifecycle"
-    annotationProcessor "android.arch.lifecycle:compiler:$lifecycle"
-    implementation "com.google.firebase:firebase-core:$firebase"
-    implementation "com.firebaseui:firebase-ui-auth:$firebaseUI"
-    implementation "com.firebaseui:firebase-ui-storage:$firebaseUI"
-    implementation "com.firebaseui:firebase-ui-database:$firebaseUI"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.palette:palette:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.room:room-runtime:2.0.0-rc01'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    annotationProcessor 'androidx.room:room-compiler:2.0.0-rc01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    implementation "com.google.firebase:firebase-core:16.0.3"
+    implementation "com.firebaseui:firebase-ui-auth:4.1.0"
+    implementation "com.firebaseui:firebase-ui-storage:4.1.0"
+    implementation "com.firebaseui:firebase-ui-database:4.1.0"
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife:9.0.0-SNAPSHOT'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-SNAPSHOT'
     implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
