--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
@@ -17,6 +18,12 @@ allprojects {
         mavenCentral()
         google() // Google's Maven repository
         jcenter()
+        maven { url "https://jitpack.io" }
+        mavenCentral()
+        maven {
+            name 'Sonatype SNAPSHOTs'
+            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        }
     }
 }
 
