--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        mavenCentral()
         google()
         jcenter()
-        maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:4.0.1' // google-services plugin
+        classpath 'com.google.gms:google-services:4.2.0' // google-services plugin
     }
 }
 
 allprojects {
     repositories {
         mavenCentral()
-        google() // Google's Maven repository
+        google()
         jcenter()
-        maven { url "https://jitpack.io" }
-        mavenCentral()
-        maven {
-            name 'Sonatype SNAPSHOTs'
-            url 'https://oss.sonatype.org/content/repositories/snapshots/'
-        }
     }
 }
 
